config/dev/operator/issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcp
