config/dev/operator/frontproxy.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: frontproxy
  namespace: kcp
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - kcp.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: frontproxy-front-proxy
          port: 8443
