config/dev/operator/rootshard.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: root
  namespace: kcp
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - root.kcp.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: root-kcp
          port: 6443
