config/dev/operator/shard-theseus.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: theseus
  namespace: kcp
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - theseus.kcp.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: theseus-shard-kcp
          port: 6443
